engine/app_grammar.js
module.exports = (function() {
  /*
   * Generated by PEG.js 0.8.0.
   *
   * http://pegjs.majda.cz/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function SyntaxError(message, expected, found, offset, line, column) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.offset   = offset;
    this.line     = line;
    this.column   = column;

    this.name     = "SyntaxError";
  }

  peg$subclass(SyntaxError, Error);

  function parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},

        peg$FAILED = {},

        peg$startRuleFunctions = { program: peg$parseprogram, query: peg$parsequery },
        peg$startRuleFunction  = peg$parseprogram,

        peg$c0 = peg$FAILED,
        peg$c1 = [],
        peg$c2 = "=>",
        peg$c3 = { type: "literal", value: "=>", description: "\"=>\"" },
        peg$c4 = function(at_rules, inputs, outputs) {
            return ({ 'at-rules': take(at_rules, 0), inputs: inputs, outputs: outputs });
        },
        peg$c5 = function(inputs) {
            return take(inputs, 0);
        },
        peg$c6 = "@setting",
        peg$c7 = { type: "literal", value: "@setting", description: "\"@setting\"" },
        peg$c8 = "{",
        peg$c9 = { type: "literal", value: "{", description: "\"{\"" },
        peg$c10 = "}",
        peg$c11 = { type: "literal", value: "}", description: "\"}\"" },
        peg$c12 = function(name, props) { return AtRule.Setting(name, take(props, 0)); },
        peg$c13 = "@name",
        peg$c14 = { type: "literal", value: "@name", description: "\"@name\"" },
        peg$c15 = ";",
        peg$c16 = { type: "literal", value: ";", description: "\";\"" },
        peg$c17 = function(name) { return AtRule.Name(name); },
        peg$c18 = "@description",
        peg$c19 = { type: "literal", value: "@description", description: "\"@description\"" },
        peg$c20 = function(desc) { return AtRule.Description(desc); },
        peg$c21 = ",",
        peg$c22 = { type: "literal", value: ",", description: "\",\"" },
        peg$c23 = function(first, rest) {
            return [first].concat(take(rest, 2));
        },
        peg$c24 = null,
        peg$c25 = "all",
        peg$c26 = { type: "literal", value: "all", description: "\"all\"" },
        peg$c27 = "some",
        peg$c28 = { type: "literal", value: "some", description: "\"some\"" },
        peg$c29 = "as",
        peg$c30 = { type: "literal", value: "as", description: "\"as\"" },
        peg$c31 = function(quantifier, channel, filters, alias) {
            return ({ quantifier: quantifier !== null ? quantifier[0] : 'some',
                      alias: alias !== null ? alias[2] : null,
                      channelName: channel.pseudo !== null ? channel.pseudo.name : 'source',
                      channelArgs: channel.pseudo !== null ? channel.pseudo.args : [],
                      selector: channel.selector,
                      filters: take(filters, 0) });
        },
        peg$c32 = function(channel, outputs) {
            return ({ selector: channel.selector,
                      channelName: channel.pseudo !== null ? channel.pseudo.name : 'sink',
                      channelArgs: channel.pseudo !== null ? channel.pseudo.args : [],
                      outputs: take(outputs, 0) });
        },
        peg$c33 = function(first, rest) {
            return [first].concat(take(rest, 2))
        },
        peg$c34 = ":",
        peg$c35 = { type: "literal", value: ":", description: "\":\"" },
        peg$c36 = "(",
        peg$c37 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c38 = ")",
        peg$c39 = { type: "literal", value: ")", description: "\")\"" },
        peg$c40 = function(name, args) {
            return { name: name, args: args !== null ? args[1] : [] };
        },
        peg$c41 = function(selector, pseudo) {
            return ({ selector: take(selector, 0), pseudo: pseudo }); },
        peg$c42 = function(pseudo) { return ({ selector: [], pseudo: pseudo }); },
        peg$c43 = ".",
        peg$c44 = { type: "literal", value: ".", description: "\".\"" },
        peg$c45 = function(name) { return Selector.Id(name); },
        peg$c46 = "#",
        peg$c47 = { type: "literal", value: "#", description: "\"#\"" },
        peg$c48 = function(name) { return Selector.Tag(name); },
        peg$c49 = function(rule) {
            return rule;
        },
        peg$c50 = function(lhs, comp, rhs) {
            return InputRule.Threshold(lhs, comp, rhs);
        },
        peg$c51 = "change",
        peg$c52 = { type: "literal", value: "change", description: "\"change\"" },
        peg$c53 = ">",
        peg$c54 = { type: "literal", value: ">", description: "\">\"" },
        peg$c55 = function(lhs, by) {
            return InputRule.Change(lhs, by !== null ? by[2] : null);
        },
        peg$c56 = "=",
        peg$c57 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c58 = function(name, rhs) {
            return ({ name: name, rhs: rhs });
        },
        peg$c59 = { type: "other", description: "comparator" },
        peg$c60 = ">=",
        peg$c61 = { type: "literal", value: ">=", description: "\">=\"" },
        peg$c62 = "<=",
        peg$c63 = { type: "literal", value: "<=", description: "\"<=\"" },
        peg$c64 = "<",
        peg$c65 = { type: "literal", value: "<", description: "\"<\"" },
        peg$c66 = "=~",
        peg$c67 = { type: "literal", value: "=~", description: "\"=~\"" },
        peg$c68 = "has~",
        peg$c69 = { type: "literal", value: "has~", description: "\"has~\"" },
        peg$c70 = "has",
        peg$c71 = { type: "literal", value: "has", description: "\"has\"" },
        peg$c72 = "!=",
        peg$c73 = { type: "literal", value: "!=", description: "\"!=\"" },
        peg$c74 = "-",
        peg$c75 = { type: "literal", value: "-", description: "\"-\"" },
        peg$c76 = function(arg) { return Expression.UnaryOp(arg, '-', function(x) { return -x; }); },
        peg$c77 = "+",
        peg$c78 = { type: "literal", value: "+", description: "\"+\"" },
        peg$c79 = function(lhs, rhs) { return Expression.BinaryOp(lhs, rhs, '+', function(x, y) { return x + y; }); },
        peg$c80 = function(lhs, rhs) { return Expression.BinaryOp(lhs, rhs, '-', function(x, y) { return x - y; }); },
        peg$c81 = "*",
        peg$c82 = { type: "literal", value: "*", description: "\"*\"" },
        peg$c83 = function(lhs, rhs) { return Expression.BinaryOp(lhs, rhs, '*', function(x, y) { return x * y; }); },
        peg$c84 = "/",
        peg$c85 = { type: "literal", value: "/", description: "\"/\"" },
        peg$c86 = function(lhs, rhs) { return Expression.BinaryOp(lhs, rhs, '/', function(x, y) { return x / y; }); },
        peg$c87 = function(lhs, name) { return Expression.MemberRef(lhs, name); },
        peg$c88 = function(name) { return Expression.VarRef(name); },
        peg$c89 = function(subexp) { return subexp; },
        peg$c90 = function(name, args) {
            return Expression.FunctionCall(name, args === null ? [] : args);
        },
        peg$c91 = "@",
        peg$c92 = { type: "literal", value: "@", description: "\"@\"" },
        peg$c93 = function(name) { return Expression.SettingRef(name); },
        peg$c94 = function(name) { return Expression.ObjectRef(name); },
        peg$c95 = { type: "other", description: "literal" },
        peg$c96 = function(val) { return Expression.Constant(Value.Boolean(val)); },
        peg$c97 = function(val) { return Expression.Constant(Value.String(val)); },
        peg$c98 = "%",
        peg$c99 = { type: "literal", value: "%", description: "\"%\"" },
        peg$c100 = function(val, unit) { return Expression.Constant(Value.Measure(val, unit)); },
        peg$c101 = function(val) { return Expression.Constant(Value.Number(val)); },
        peg$c102 = function() { return true; },
        peg$c103 = function() { return false; },
        peg$c104 = "on",
        peg$c105 = { type: "literal", value: "on", description: "\"on\"" },
        peg$c106 = "true",
        peg$c107 = { type: "literal", value: "true", description: "\"true\"" },
        peg$c108 = "off",
        peg$c109 = { type: "literal", value: "off", description: "\"off\"" },
        peg$c110 = "false",
        peg$c111 = { type: "literal", value: "false", description: "\"false\"" },
        peg$c112 = /^[^\\"]/,
        peg$c113 = { type: "class", value: "[^\\\\\"]", description: "[^\\\\\"]" },
        peg$c114 = "\\\"",
        peg$c115 = { type: "literal", value: "\\\"", description: "\"\\\\\\\"\"" },
        peg$c116 = function() { return '"'; },
        peg$c117 = "\\n",
        peg$c118 = { type: "literal", value: "\\n", description: "\"\\\\n\"" },
        peg$c119 = function() { return '\n'; },
        peg$c120 = "\\'",
        peg$c121 = { type: "literal", value: "\\'", description: "\"\\\\'\"" },
        peg$c122 = function() { return '\''; },
        peg$c123 = /^[^\\']/,
        peg$c124 = { type: "class", value: "[^\\\\']", description: "[^\\\\']" },
        peg$c125 = { type: "other", description: "string" },
        peg$c126 = "\"",
        peg$c127 = { type: "literal", value: "\"", description: "\"\\\"\"" },
        peg$c128 = function(chars) { return chars.join(''); },
        peg$c129 = "'",
        peg$c130 = { type: "literal", value: "'", description: "\"'\"" },
        peg$c131 = { type: "other", description: "digit" },
        peg$c132 = /^[0-9]/,
        peg$c133 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c134 = { type: "other", description: "number" },
        peg$c135 = "e",
        peg$c136 = { type: "literal", value: "e", description: "\"e\"" },
        peg$c137 = function(num) { return parseFloat(num); },
        peg$c138 = /^[A-Za-z]/,
        peg$c139 = { type: "class", value: "[A-Za-z]", description: "[A-Za-z]" },
        peg$c140 = /^[A-Za-z\-0-9_]/,
        peg$c141 = { type: "class", value: "[A-Za-z\\-0-9_]", description: "[A-Za-z\\-0-9_]" },
        peg$c142 = { type: "other", description: "ident" },
        peg$c143 = { type: "other", description: "whitespace" },
        peg$c144 = /^[ \r\n\t\x0B]/,
        peg$c145 = { type: "class", value: "[ \\r\\n\\t\\x0B]", description: "[ \\r\\n\\t\\x0B]" },
        peg$c146 = { type: "other", description: "comment" },
        peg$c147 = "/*",
        peg$c148 = { type: "literal", value: "/*", description: "\"/*\"" },
        peg$c149 = /^[^*]/,
        peg$c150 = { type: "class", value: "[^*]", description: "[^*]" },
        peg$c151 = /^[^\/]/,
        peg$c152 = { type: "class", value: "[^\\/]", description: "[^\\/]" },
        peg$c153 = "*/",
        peg$c154 = { type: "literal", value: "*/", description: "\"*/\"" },

        peg$currPos          = 0,
        peg$reportedPos      = 0,
        peg$cachedPos        = 0,
        peg$cachedPosDetails = { line: 1, column: 1, seenCR: false },
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$reportedPos, peg$currPos);
    }

    function offset() {
      return peg$reportedPos;
    }

    function line() {
      return peg$computePosDetails(peg$reportedPos).line;
    }

    function column() {
      return peg$computePosDetails(peg$reportedPos).column;
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        peg$reportedPos
      );
    }

    function error(message) {
      throw peg$buildException(message, null, peg$reportedPos);
    }

    function peg$computePosDetails(pos) {
      function advance(details, startPos, endPos) {
        var p, ch;

        for (p = startPos; p < endPos; p++) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }
        }
      }

      if (peg$cachedPos !== pos) {
        if (peg$cachedPos > pos) {
          peg$cachedPos = 0;
          peg$cachedPosDetails = { line: 1, column: 1, seenCR: false };
        }
        advance(peg$cachedPosDetails, peg$cachedPos, pos);
        peg$cachedPos = pos;
      }

      return peg$cachedPosDetails;
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, pos) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0180-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1080-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      var posDetails = peg$computePosDetails(pos),
          found      = pos < input.length ? input.charAt(pos) : null;

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        pos,
        posDetails.line,
        posDetails.column
      );
    }

    function peg$parseprogram() {
      var s0, s1, s2, s3, s4, s5, s6, s7;

      s0 = peg$currPos;
      s1 = peg$parse_();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$currPos;
        s4 = peg$parseat_rule();
        if (s4 !== peg$FAILED) {
          s5 = peg$parse_();
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$c0;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$c0;
        }
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$currPos;
          s4 = peg$parseat_rule();
          if (s4 !== peg$FAILED) {
            s5 = peg$parse_();
            if (s5 !== peg$FAILED) {
              s4 = [s4, s5];
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$c0;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$c0;
          }
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseinput_channel_list();
          if (s3 !== peg$FAILED) {
            if (input.substr(peg$currPos, 2) === peg$c2) {
              s4 = peg$c2;
              peg$currPos += 2;
            } else {
              s4 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c3); }
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parse_();
              if (s5 !== peg$FAILED) {
                s6 = peg$parseoutput_channel_list();
                if (s6 !== peg$FAILED) {
                  s7 = peg$parse_();
                  if (s7 !== peg$FAILED) {
                    peg$reportedPos = s0;
                    s1 = peg$c4(s2, s3, s6);
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$c0;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$c0;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$c0;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parsequery() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$currPos;
      s3 = peg$parseinput_channel();
      if (s3 !== peg$FAILED) {
        s4 = peg$parse_();
        if (s4 !== peg$FAILED) {
          s3 = [s3, s4];
          s2 = s3;
        } else {
          peg$currPos = s2;
          s2 = peg$c0;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$c0;
      }
      if (s2 !== peg$FAILED) {
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          s2 = peg$currPos;
          s3 = peg$parseinput_channel();
          if (s3 !== peg$FAILED) {
            s4 = peg$parse_();
            if (s4 !== peg$FAILED) {
              s3 = [s3, s4];
              s2 = s3;
            } else {
              peg$currPos = s2;
              s2 = peg$c0;
            }
          } else {
            peg$currPos = s2;
            s2 = peg$c0;
          }
        }
      } else {
        s1 = peg$c0;
      }
      if (s1 !== peg$FAILED) {
        peg$reportedPos = s0;
        s1 = peg$c5(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parseat_rule() {
      var s0;

      s0 = peg$parseat_setting();
      if (s0 === peg$FAILED) {
        s0 = peg$parseat_name();
        if (s0 === peg$FAILED) {
          s0 = peg$parseat_description();
        }
      }

      return s0;
    }

    function peg$parseat_setting() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 8) === peg$c6) {
        s1 = peg$c6;
        peg$currPos += 8;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c7); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseident();
          if (s3 !== peg$FAILED) {
            s4 = peg$parse_();
            if (s4 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 123) {
                s5 = peg$c8;
                peg$currPos++;
              } else {
                s5 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c9); }
              }
              if (s5 !== peg$FAILED) {
                s6 = peg$parse_();
                if (s6 !== peg$FAILED) {
                  s7 = [];
                  s8 = peg$currPos;
                  s9 = peg$parseoutput_property();
                  if (s9 !== peg$FAILED) {
                    s10 = peg$parse_();
                    if (s10 !== peg$FAILED) {
                      s9 = [s9, s10];
                      s8 = s9;
                    } else {
                      peg$currPos = s8;
                      s8 = peg$c0;
                    }
                  } else {
                    peg$currPos = s8;
                    s8 = peg$c0;
                  }
                  while (s8 !== peg$FAILED) {
                    s7.push(s8);
                    s8 = peg$currPos;
                    s9 = peg$parseoutput_property();
                    if (s9 !== peg$FAILED) {
                      s10 = peg$parse_();
                      if (s10 !== peg$FAILED) {
                        s9 = [s9, s10];
                        s8 = s9;
                      } else {
                        peg$currPos = s8;
                        s8 = peg$c0;
                      }
                    } else {
                      peg$currPos = s8;
                      s8 = peg$c0;
                    }
                  }
                  if (s7 !== peg$FAILED) {
                    if (input.charCodeAt(peg$currPos) === 125) {
                      s8 = peg$c10;
                      peg$currPos++;
                    } else {
                      s8 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c11); }
                    }
                    if (s8 !== peg$FAILED) {
                      peg$reportedPos = s0;
                      s1 = peg$c12(s3, s7);
                      s0 = s1;
                    } else {
                      peg$currPos = s0;
                      s0 = peg$c0;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$c0;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$c0;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$c0;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parseat_name() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 5) === peg$c13) {
        s1 = peg$c13;
        peg$currPos += 5;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c14); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseliteral_string();
          if (s3 !== peg$FAILED) {
            s4 = peg$parse_();
            if (s4 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 59) {
                s5 = peg$c15;
                peg$currPos++;
              } else {
                s5 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c16); }
              }
              if (s5 !== peg$FAILED) {
                peg$reportedPos = s0;
                s1 = peg$c17(s3);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$c0;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parseat_description() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 12) === peg$c18) {
        s1 = peg$c18;
        peg$currPos += 12;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c19); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseliteral_string();
          if (s3 !== peg$FAILED) {
            s4 = peg$parse_();
            if (s4 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 59) {
                s5 = peg$c15;
                peg$currPos++;
              } else {
                s5 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c16); }
              }
              if (s5 !== peg$FAILED) {
                peg$reportedPos = s0;
                s1 = peg$c20(s3);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$c0;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$c0;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }

    function peg$parseinput_channel_list() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8;

      s0 = peg$currPos;
      s1 = peg$parseinput_channel();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$currPos;
          if (input.charCodeAt(peg$currPos) === 44) {
            s5 = peg$c21;
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c22); }
          }
          if (s5 !== peg$FAILED) {
            s6 = peg$parse_();
            if (s6 !== peg$FAILED) {
              s7 = peg$parseinput_channel();
              if (s7 !== peg$FAILED) {
                s8 = peg$parse_();
                if (s8 !== peg$FAILED) {
                  s5 = [s5, s6, s7, s8];
                  s4 = s5;
                } else {
                  peg$currPos = s4;
                  s4 = peg$c0;
                }
              } else {
                peg$currPos = s4;
                s4 = peg$c0;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$c0;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$c0;
          }
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$currPos;
            if (input.charCodeAt(peg$currPos) === 44) {
              s5 = peg$c21;
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c22); }
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parse_();
              if (s6 !== peg$FAILED) {
                s7 = peg$parseinput_channel();
                if (s7 !== peg$FAILED) {
                  s8 = peg$parse_();
                  if (s8 !== peg$FAILED) {
                    s5 = [s5, s6, s7, s8];
                    s4 = s5;
                  } else {
                    peg$currPos = s4;
                    s4 = peg$c0;
                  }
                } else {
                  peg$currPos = s4;
                  s4 = peg$c0;
                }
              } else {
                peg$currPos = s4;
                s4 = peg$c0;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$c0;
            }
          }
          if (s3 !== peg$FAILED) {
            peg$reportedPos = s0;
            s1 = peg$c23(s1, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$c0;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$c0;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$c0;
      }

      return s0;
    }
